--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,7 @@ body {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background: rgba(0, 0, 0, 0.5);
+  /* background: rgba(0, 0, 0, 0.5); */
   border: none;
   color: white;
   font-size: 2rem;
